# morse

./: .gitignore  Makefile.am  README.md  build.zig  configure.ac  main.c
include/: libmorse.h  libmorsebeep.h
src/: .gitignore  libmorse.c  libmorsebeep.c  morse-audio.c  morse-compress.c  morse-decode.c  morse-encode.c  morse-uncompress.c
